--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "characters.h": "c",
-        "inventory.h": "c"
+        "inventory.h": "c",
+        "xutility": "c"
     }
 }
